Correction scrollbarr V3

--- a/style.css
+++ b/style.css
@@ -452,8 +452,8 @@ a{
 .animation-check{
     
     padding: 1.7em;
-    height:42px;
-    width: 5px;
+    height:0;
+    width: 0;
     position: absolute;
     left: 85%;
     background-color: #99e2d0;
@@ -467,6 +467,7 @@ a{
 	-moz-transition: -moz-transform 0.5s ease-in-out;
 	-o-transition: -o-transform 0.5s ease-in-out;
 	-webkit-transition: -webkit-transform 0.5s ease-in-out;
+    
     		  
 }
 
@@ -477,6 +478,7 @@ a{
     color:white ;
     transform: rotate(0deg);
     transition-duration: .5s;
+    
 
 }
 .description-menu:hover  .fa-check-circle,
@@ -529,7 +531,8 @@ a{
 .description-menu10:hover > .animation-check{ 
     opacity:1;
     transform: translateX(-45px); 
-    width: 40px;
+    width: 15%;
+    height:42%;
      
      
     
